# port2ser

./: .gitignore  README.md  pyproject.toml
port2ser/: console.py  data_forwarder.py  packet.py  parser.py  port2ser.py  rfcomm.py  serial_server.py  tcp.py  transport_server.py
tests/: test_parser.py  test_port2ser.py
