[tool.poetry]
name = "port2ser"
version = "0.1.0"
description = ""
authors = ["Chen Yang <yangchen@thinkmore.info>"]

[tool.poetry.dependencies]
python = "^3.9"
pyserial-asyncio = "^0.5"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
port2ser = 'port2ser.console:run'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
